--- a/index.html
+++ b/index.html
@@ -41,41 +41,53 @@
   <script type="text/babel">
     console.log("야옹");
 
-    const catItem = (
-      <li>
-        <img src="https://cataas.com/cat/60b73094e04e18001194a309/says/react" />
-      </li>
-    );
-    const title = (
-      <div>
-        <h1>1번째 고양이 가라사대2</h1>
-      </div>
-    )
-    const form = (
-      <form>
-        <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
-        <button type="submit">생성</button>
-      </form>
-    )
-    const favorites = (
-      <ul class="favorites">
-        {catItem}
-        {catItem}
-        {catItem}
-      </ul>
-    )
-    const mainCard = (
-      <div class="main-card">
-        <img src="https://cataas.com/cat/60b73094e04e18001194a309/says/react" alt="고양이" width="400" />
-        <button>🤍</button>
-      </div>
-    )
+
+    const Title = (props) => {
+      return (
+        <div>
+          <h1>{props.children}</h1>
+        </div>
+      )
+    }
+    const Form = () => {
+      return (
+        <form>
+          <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
+          <button type="submit">생성</button>
+        </form>
+      )
+    }
+
+    function CatItem(props) {
+      return (
+        <li>
+          <img src={props.img} />
+        </li>
+      )
+    }
+    function Favorites() {
+      return (
+        <ul className="favorites">
+          <CatItem img="https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn" title="cat1" />
+          <CatItem img="https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript" />
+
+        </ul>
+      )
+    }
+    const MainCard = ({ img }) => {
+      return (
+        <div className="main-card">
+          <img src={img} alt="고양이" width="400" />
+          <button>🤍</button>
+        </div>
+      )
+    }
     const app = (
       <div>
-        {title}
-        {form}
-        {mainCard}
-        {favorites}
+        <Title>1번째 고양이 가라사대</Title>
+        <Form />
+        <MainCard img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" />
+        <Favorites />
       </div>
     )
     const 여기다가그려 = document.querySelector('#app')
