useState 상태 끌어올리기

--- a/index.html
+++ b/index.html
@@ -25,10 +25,6 @@
     flex-wrap: wrap;
     gap: 15px;
   }
-
-  .favorites img {
-    width: 150px;
-  }
 </style>
 
 <body>
@@ -49,9 +45,10 @@
         </div>
       )
     }
-    const Form = () => {
+
+    const Form = ({ handlelFormSubmit }) => {
       return (
-        <form>
+        <form onSubmit={handlelFormSubmit}>
           <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
           <button type="submit">생성</button>
         </form>
@@ -61,7 +58,7 @@
     function CatItem(props) {
       return (
         <li>
-          <img src={props.img} />
+          <img src={props.img} style={{ width: "150px" }} />
         </li>
       )
     }
@@ -75,23 +72,37 @@
       )
     }
     const MainCard = ({ img }) => {
+      function handleHeartClick() {
+        console.log("하트 눌렀음")
+      }
       return (
         <div className="main-card">
           <img src={img} alt="고양이" width="400" />
-          <button>🤍</button>
+          <button onClick={handleHeartClick}>🤍</button>
         </div>
       )
     }
-    const app = (
-      <div>
-        <Title>1번째 고양이 가라사대</Title>
-        <Form />
-        <MainCard img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" />
-        <Favorites />
-      </div>
-    )
+    const App = () => {
+      const [counter, setCounter] = React.useState(1);
+
+      console.log('카운터', counter)
+
+      const handlelFormSubmit = (event) => {
+        event.preventDefault()
+        console.log("폼 전송됨")
+        setCounter(counter + 1)
+      }
+      return (
+        <div>
+          <Title>{counter}번째 고양이 가라사대</Title>
+          <Form handlelFormSubmit={handlelFormSubmit} />
+          <MainCard img="https://cataas.com/cat/60b73094e04e18001194a309/says/react" />
+          <Favorites />
+        </div>
+      )
+    }
     const 여기다가그려 = document.querySelector('#app')
-    ReactDOM.render(app, 여기다가그려)
+    ReactDOM.render(<App />, 여기다가그려)
   </script>
 </body>
 
