--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
     }
 
     const Form = ({ handlelFormSubmit }) => {
+      const [value, setValue] = React.useState('')
+      const handleInputChange = (e) => {
+        setValue(e.target.value.toUpperCase())
+      }
       return (
         <form onSubmit={handlelFormSubmit}>
-          <input type="text" name="name" placeholder="영어 대사를 입력해주세요" />
+          <input type="text" name="name" placeholder="영어 대사를 입력해주세요" value={value} onChange={handleInputChange} />
           <button type="submit">생성</button>
         </form>
       )
