--- a/index.html
+++ b/index.html
@@ -46,15 +46,33 @@
       )
     }
 
-    const Form = ({ handlelFormSubmit }) => {
+    const Form = () => {
+      const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
       const [value, setValue] = React.useState('')
+      const [errorMessage, setErrorMessage] = React.useState('')
+
       const handleInputChange = (e) => {
-        setValue(e.target.value.toUpperCase())
+        const userValue = e.target.value;
+        console.log(includesHangul(userValue))
+        setErrorMessage('')
+        if (includesHangul(userValue)) {
+          setErrorMessage('한글은 입력할 수 없습니다.')
+        }
+        setValue(userValue.toUpperCase())
       }
+      const handleFormSubmit = (e) => {
+        e.preventDefault();
+        setErrorMessage('')
+        if (value === '') {
+          setErrorMessage('빈 값으로 만들 수 없습니다.')
+        }
+      }
+
       return (
-        <form onSubmit={handlelFormSubmit}>
+        <form onSubmit={handleFormSubmit}>
           <input type="text" name="name" placeholder="영어 대사를 입력해주세요" value={value} onChange={handleInputChange} />
           <button type="submit">생성</button>
+          <p style={{ color: 'red' }}>{errorMessage}</p>
         </form>
       )
     }
@@ -94,7 +112,7 @@
       const [favorites, setFavorites] = React.useState([CAT1, CAT2])
       console.log('카운터', counter)
 
-      const handlelFormSubmit = (event) => {
+      const handleFormSubmit = (event) => {
         event.preventDefault()
         console.log("폼 전송됨")
         setCounter(counter + 1)
@@ -107,7 +125,7 @@
       return (
         <div>
           <Title>{counter}번째 고양이 가라사대</Title>
-          <Form handlelFormSubmit={handlelFormSubmit} />
+          <Form handleFormSubmit={handleFormSubmit} />
           <MainCard img={mainCat} handleHeartClick={handleHeartClick} />
           <Favorites favorites={favorites} />
         </div>
