--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
   <script type="text/babel">
-    console.log("야옹");
-
-
     const Title = (props) => {
       return (
         <div>
@@ -46,14 +43,13 @@
       )
     }
 
-    const Form = () => {
+    const Form = ({ updateMainCat }) => {
       const includesHangul = (text) => /[ㄱ-ㅎ|ㅏ-ㅣ|가-힣]/i.test(text);
       const [value, setValue] = React.useState('')
       const [errorMessage, setErrorMessage] = React.useState('')
 
       const handleInputChange = (e) => {
         const userValue = e.target.value;
-        console.log(includesHangul(userValue))
         setErrorMessage('')
         if (includesHangul(userValue)) {
           setErrorMessage('한글은 입력할 수 없습니다.')
@@ -65,7 +61,10 @@
         setErrorMessage('')
         if (value === '') {
           setErrorMessage('빈 값으로 만들 수 없습니다.')
+          return
         }
+
+        updateMainCat();
       }
 
       return (
@@ -94,12 +93,12 @@
         </ul>
       )
     }
-    const MainCard = ({ img, handleHeartClick }) => {
+    const MainCard = ({ img, onHeartClick }) => {
 
       return (
         <div className="main-card">
           <img src={img} alt="고양이" width="400" />
-          <button onClick={handleHeartClick}>🤍</button>
+          <button onClick={onHeartClick}>🤍</button>
         </div>
       )
     }
@@ -110,23 +109,19 @@
       const [counter, setCounter] = React.useState(1);
       const [mainCat, setMainCat] = React.useState(CAT1);
       const [favorites, setFavorites] = React.useState([CAT1, CAT2])
-      console.log('카운터', counter)
 
-      const handleFormSubmit = (event) => {
-        event.preventDefault()
-        console.log("폼 전송됨")
-        setCounter(counter + 1)
+      const updateMainCat = (event) => {
         setMainCat(CAT2)
+        setCounter(counter + 1)
       }
       function handleHeartClick() {
-        console.log("하트 눌렀음")
         setFavorites([...favorites, CAT3])
       }
       return (
         <div>
           <Title>{counter}번째 고양이 가라사대</Title>
-          <Form handleFormSubmit={handleFormSubmit} />
-          <MainCard img={mainCat} handleHeartClick={handleHeartClick} />
+          <Form updateMainCat={updateMainCat} />
+          <MainCard img={mainCat} onHeartClick={handleHeartClick} />
           <Favorites favorites={favorites} />
         </div>
       )
