23.로컬스토리지

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
   <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
   <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-
   <script type="text/babel">
+    const jsonLocalStorage = {
+      setItem: (key, value) => {
+        localStorage.setItem(key, JSON.stringify(value));
+      },
+      getItem: (key) => {
+        return JSON.parse(localStorage.getItem(key));
+      },
+    };
     const Title = (props) => {
       return (
         <div>
@@ -59,11 +66,11 @@
       const handleFormSubmit = (e) => {
         e.preventDefault();
         setErrorMessage('')
+
         if (value === '') {
           setErrorMessage('빈 값으로 만들 수 없습니다.')
           return
         }
-
         updateMainCat();
       }
 
@@ -106,16 +113,21 @@
       const CAT1 = "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
       const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
       const CAT3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
-      const [counter, setCounter] = React.useState(1);
+      const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
+      //localStorage로 가져온 값이 string값으로 가져와지기 떄문에 number로 바꿔야 counter값이 제대로 잘 더해진다.
       const [mainCat, setMainCat] = React.useState(CAT1);
-      const [favorites, setFavorites] = React.useState([CAT1, CAT2])
+      const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || [])
 
-      const updateMainCat = (event) => {
+      const updateMainCat = () => {
         setMainCat(CAT2)
-        setCounter(counter + 1)
+        const nextCounter = counter + 1
+        setCounter(nextCounter)
+        jsonLocalStorage.setItem("counter", nextCounter)
       }
       function handleHeartClick() {
-        setFavorites([...favorites, CAT3])
+        const nextFavorites = [...favorites, mainCat]
+        setFavorites(nextFavorites)
+        jsonLocalStorage.setItem('favorites', nextFavorites)
       }
       return (
         <div>
