--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         return JSON.parse(localStorage.getItem(key));
       },
     };
+    const fetchCat = async (text) => {
+      const OPEN_API_DOMAIN = "https://cataas.com";
+      const response = await fetch(`${OPEN_API_DOMAIN}/cat/says/${text}?json=true`);
+      const responseJson = await response.json();
+      return `${OPEN_API_DOMAIN}/${responseJson.url}`;
+    };
+
     const Title = (props) => {
       return (
         <div>
@@ -71,7 +78,7 @@
           setErrorMessage('빈 값으로 만들 수 없습니다.')
           return
         }
-        updateMainCat();
+        updateMainCat(value);
       }
 
       return (
@@ -118,8 +125,10 @@
       const [mainCat, setMainCat] = React.useState(CAT1);
       const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || [])
 
-      const updateMainCat = () => {
-        setMainCat(CAT2)
+      const updateMainCat = async (value) => {
+        const newCat = await fetchCat(value)
+
+        setMainCat(newCat)
         const nextCounter = counter + 1
         setCounter(nextCounter)
         jsonLocalStorage.setItem("counter", nextCounter)
