--- a/index.html
+++ b/index.html
@@ -98,7 +98,9 @@
       )
     }
     function Favorites({ favorites }) {
-
+      if (favorites.length === 0) {
+        return <div>사진 위 하트를 눌러 고양이 사진을 저장해봐요!</div>
+      }
       return (
         <ul className="favorites">
           {favorites.map((cat) => (
@@ -107,12 +109,12 @@
         </ul>
       )
     }
-    const MainCard = ({ img, onHeartClick }) => {
-
+    const MainCard = ({ img, onHeartClick, alreadyFavorite }) => {
+      const heartIcon = alreadyFavorite ? '💖' : '🤍';
       return (
         <div className="main-card">
           <img src={img} alt="고양이" width="400" />
-          <button onClick={onHeartClick}>🤍</button>
+          <button onClick={onHeartClick}>{heartIcon}</button>
         </div>
       )
     }
@@ -125,6 +127,16 @@
       const [mainCat, setMainCat] = React.useState(CAT1);
       const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || [])
 
+      const alreadyFavorite = favorites.includes(mainCat)
+
+      const setInitialCat = async () => {
+        const newCat = await fetchCat('First cat');
+        setMainCat(newCat);
+      }
+
+      React.useEffect(() => {
+        setInitialCat()
+      }, [])
       const updateMainCat = async (value) => {
         const newCat = await fetchCat(value)
 
@@ -138,11 +150,12 @@
         setFavorites(nextFavorites)
         jsonLocalStorage.setItem('favorites', nextFavorites)
       }
+      const counterTitle = counter === null ? '' : `${counter}번째 `
       return (
         <div>
-          <Title>{counter}번째 고양이 가라사대</Title>
+          <Title>{counterTitle}고양이 가라사대</Title>
           <Form updateMainCat={updateMainCat} />
-          <MainCard img={mainCat} onHeartClick={handleHeartClick} />
+          <MainCard img={mainCat} onHeartClick={handleHeartClick} alreadyFavorite={alreadyFavorite} />
           <Favorites favorites={favorites} />
         </div>
       )
