--- a/index.html
+++ b/index.html
@@ -122,11 +122,15 @@
       const CAT1 = "https://cataas.com/cat/60b73094e04e18001194a309/says/react";
       const CAT2 = "https://cataas.com//cat/5e9970351b7a400011744233/says/inflearn";
       const CAT3 = "https://cataas.com/cat/595f280b557291a9750ebf65/says/JavaScript";
-      const [counter, setCounter] = React.useState(jsonLocalStorage.getItem("counter"));
+      const [counter, setCounter] = React.useState(() => {
+        return jsonLocalStorage.getItem("counter");
+      })
+      // localStorage의 불필요한 호출을 줄이기 위해 useState 안에 함수를 넣어줌. 한번만 호출되게 하기 위해
       //localStorage로 가져온 값이 string값으로 가져와지기 떄문에 number로 바꿔야 counter값이 제대로 잘 더해진다.
       const [mainCat, setMainCat] = React.useState(CAT1);
-      const [favorites, setFavorites] = React.useState(jsonLocalStorage.getItem("favorites") || [])
-
+      const [favorites, setFavorites] = React.useState(() => {
+        return jsonLocalStorage.getItem("favorites") || []
+      })
       const alreadyFavorite = favorites.includes(mainCat)
 
       const setInitialCat = async () => {
@@ -141,10 +145,15 @@
         const newCat = await fetchCat(value)
 
         setMainCat(newCat)
-        const nextCounter = counter + 1
-        setCounter(nextCounter)
+
+        setCounter((prev) => {
+          const nextCounter = prev + 1;
+          jsonLocalStorage.setItem('counter', nextCounter);
+          return nextCounter;
+        })
         jsonLocalStorage.setItem("counter", nextCounter)
       }
+
       function handleHeartClick() {
         const nextFavorites = [...favorites, mainCat]
         setFavorites(nextFavorites)
